--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,9 @@ li .nav-link:hover {
 
 }
 .form-group .form-control {
-    padding-left: 0px;
-    border: none !important;
-    border-bottom: 2px solid black !important;
+    /* padding-left: 0px; */
+    /* border: none !important;
+    border-bottom: 2px solid black !important; */
     width: 100%;
 }
 label {
